feat(testing): add UserControllerTest per Giai doan 6 roadmap